--- a/UILabs/build.gradle
+++ b/UILabs/build.gradle
@@ -3,9 +3,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.6.+'
+        classpath 'com.android.tools.build:gradle:0.9.+'
     }
 }
+
 apply plugin: 'android'
 
 repositories {
@@ -14,7 +15,7 @@ repositories {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.0"
+    buildToolsVersion "19.0.3"
 
     defaultConfig {
         minSdkVersion 10
@@ -23,7 +24,5 @@ android {
 }
 
 dependencies {
-	compile 'com.android.support:appcompat-v7:+'
-
-    instrumentTestCompile 'com.jayway.android.robotium:robotium-solo:5.0.1'
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.+'
 }
